# filament

./: .dockerignore  .gitignore  .gitmodules  .markdownlint.yaml  .rustfmt.toml  Cargo.toml  Dockerfile  Makefile  README.md  commitlint.config.js  constants.testing.toml  constants.toml  docker-compose-dev.yml  package-lock.json  package.json  tx.sh
app/: Cargo.toml
app/src/: app.rs  app_hash.rs  component.rs  handler.rs  lib.rs  query.rs  state.rs  state_key.rs
app/src/component/: accounts.rs  assets.rs  staking.rs
app/src/component/accounts/: query.rs  state.rs
app/src/component/assets/: error.rs  state.rs
app/src/handler/: input.rs  transaction.rs
app/src/handler/input/: assets.rs  delegate.rs  transfer.rs  undelegate.rs
chain/: Cargo.toml
chain/src/: account.rs  address.rs  amount.rs  app_hash.rs  asset.rs  chain_id.rs  fee.rs  funds.rs  genesis.rs  input.rs  lib.rs  params.rs  state.rs  transaction.rs
chain/src/input/: assets.rs  delegate.rs  transfer.rs  undelegate.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/eth/: Cargo.toml
crates/eth-oracle/: Cargo.toml  secret.key
crates/eth-oracle/abi/: DelegateRegistry.json  FilamentToken.json  LockedTokenGrant.json
crates/eth-oracle/src/: config.rs  delegate_registry.rs  eth.rs  filament_token.rs  hub.rs  main.rs
crates/eth/src/: lib.rs
crates/modules/core/: Cargo.toml  openapi-v3.yaml
crates/modules/core/src/: account.rs  call.rs  campaign.rs  criteria.rs  crypto.rs  delegate.rs  error.rs  event.rs  genesis.rs  indexer.rs  lib.rs  playbook.rs  query.rs  relayer.rs  rpc.rs  segment.rs  voting.rs
crates/modules/core/tests/: integration.rs
crates/modules/indexer-registry/: Cargo.toml
crates/modules/indexer-registry/src/: call.rs  error.rs  event.rs  genesis.rs  indexer.rs  lib.rs  rpc.rs
crates/modules/indexer-registry/tests/: integration.rs  registration.rs
crates/oracle/: Cargo.toml  secret.key
crates/oracle/src/: config.rs  hub.rs  main.rs  outpost.rs
crates/provers/risc0/: Cargo.toml  build.rs
crates/provers/risc0/guest-celestia/: Cargo.toml
crates/provers/risc0/guest-mock/: Cargo.toml
crates/provers/sp1/: Cargo.toml
crates/provers/sp1/guest-celestia/: Cargo.toml
crates/provers/sp1/guest-celestia/src/: main.rs
crates/provers/sp1/guest-mock/: Cargo.toml
crates/provers/sp1/guest-mock/src/: main.rs
crates/relayer/: Cargo.toml  README.md
crates/relayer/src/: cli.rs  common.rs  config.rs  config_test.rs  database.rs  database_test.rs  error.rs  ethereum.rs  ethereum_test.rs  hub.rs  hub_test.rs  lib.rs  relayer.rs  relayer_test.rs
crates/relayer/src/tests/: common.rs  database_test.rs  ethereum_test.rs  hub_test.rs  relayer_test.rs
crates/rollup/: Cargo.toml  Makefile  build.rs
crates/rollup/benches/node/: rollup_bench.rs  rollup_coarse_measure.rs
crates/rollup/benches/prover/: datagen.rs  prover_bench.rs
crates/rollup/src/: celestia_rollup.rs  eth.rs  lib.rs  main.rs  mock_rollup.rs  test_rpc.rs
crates/rollup/src/sov-cli/: main.rs
crates/rollup/src/test-harness/: sov_demo_celestia_harness.rs
crates/rollup/tests/: all_tests.rs  test_helpers.rs
crates/rollup/tests/authenticate/: mod.rs
crates/rollup/tests/bank/: bank_periodic_da_tests.rs  bank_tests.rs  helpers.rs  mod.rs
crates/rollup/tests/celestia/: mod.rs
crates/rollup/tests/evm/: evm_account_abstraction.rs  evm_test_helper.rs  evm_tx.rs  test_client.rs
crates/rollup/tests/evm/uniswap/: package-lock.json
crates/rollup/tests/forced_sequencer_registration/: mod.rs
crates/rollup/tests/prover/: datagen.rs  mod.rs  rollup_config.toml
crates/rollup/tests/wallet/: mod.rs
crates/stf/: Cargo.toml  README.md
crates/stf/src/: authentication.rs  genesis.rs  genesis_config.rs  hooks.rs  hooks_impl.rs  lib.rs  runtime.rs  tests.rs
crates/stf/src/tests/: da_simulation.rs  mod.rs  stf_tests.rs  tx_revert_tests.rs
crates/stf/tests/: da_simulation.rs  integration.rs
crates/wasm/: Cargo.toml
crates/wasm/pkg/: filament_hub_wasm.d.ts  filament_hub_wasm.js  filament_hub_wasm_bg.js  filament_hub_wasm_bg.wasm  filament_hub_wasm_bg.wasm.d.ts  package.json
crates/wasm/src/: lib.rs
crates/wasm/tests/: web.rs
crypto/: Cargo.toml
crypto/src/: address.rs  lib.rs  sign_bytes.rs
encoding/: Cargo.toml
encoding/src/: bech32.rs  convert.rs  error.rs  lib.rs  state.rs
flt/: Cargo.toml
flt/docs/: flt-cmd-not-found.md  flt-usage.md  flt-version.md
flt/src/: client.rs  config.rs  context.rs  lib.rs  main.rs  terminal.rs
flt/src/command/: key.rs  node.rs  query.rs  transfer.rs
flt/src/command/query/: account.rs
flt/src/terminal/: args.rs  error.rs
flt/tests/: command.rs
hub/: .gitignore  Cargo.toml  celestia_rollup_config.toml  rollup-starter.sh  rollup_config.toml
hub/crates/core/: Cargo.toml
hub/crates/core/src/: lib.rs
hub/crates/modules/fila-outposts/: Cargo.toml
hub/crates/modules/fila-outposts/src/: call.rs  event.rs  genesis.rs  lib.rs  query.rs
hub/crates/provers/risc0/: Cargo.toml
hub/crates/rollup/: Cargo.toml  Makefile
hub/crates/rollup/src/: celestia_rollup.rs  mock_rollup.rs
hub/crates/rollup/tests/: integration_test.rs
hub/crates/rollup/tests/prover/: mod.rs
hub/crates/stf/: Cargo.toml
hub/crates/stf/src/: genesis.rs  genesis_config.rs  hooks.rs  lib.rs  runtime.rs
hub/docker/: run-bridge.sh
hub/docker/credentials/: bridge-0.jwt
hub/test-data/requests/: register_outpost.json
node/: Cargo.toml
node/src/: consensus.rs  info.rs  mempool.rs  request_ext.rs  run.rs  snapshot.rs
plz/: Cargo.toml
plz/docs/: plz-cmd-not-found.md  plz-node.md  plz-usage.md  plz-version.md
plz/src/: client.rs  command.rs  config.rs  context.rs  lib.rs  main.rs  terminal.rs
plz/src/command/: key.rs  node.rs  query.rs  transfer.rs
plz/src/command/query/: account.rs
plz/src/terminal/: args.rs
plz/tests/: command.rs
pulzaard/: Cargo.toml
pulzaard/src/: config.rs  consensus.rs  lib.rs  main.rs  mempool.rs  snapshot.rs
tools/proto-build/: Cargo.toml
tools/proto-build/src/: main.rs
(+166 files in other folders)
