[workspace]
resolver  = "2"
members   = [
  "crates/cli",
  "crates/config",
  "crates/modules/campaigns",
  "crates/modules/indexer-registry",
  "crates/provers/risc0",
  "crates/rollup",
  "crates/stf",
]

[workspace.package]
version       = "0.1.0"
authors       = ["Filament Team <core@filament.zone>"]
edition       = "2021"
license       = "MIT or Apache-2.0"
homepage      = "https://filament.zone"
repository    = "https://github.com/filament-zone/incentives"
rust-version  = "1.73"
publish       = false

# In case you need inspiration for new lints to add to the list, this is a good
# reference: <https://github.com/EmbarkStudios/rust-ecosystem/blob/6783ae1573d62f3f5439b8ff9e04bec191ec2eaf/lints.toml>.
[workspace.lints.clippy]
debug_assert_with_mut_call    = "deny"
doc_link_with_quotes          = "deny"
inefficient_to_string         = "deny"
map_flatten                   = "deny"
manual_ok_or                  = "deny"
match_same_arms               = "deny"
semicolon_if_nothing_returned = "deny"
#map_err_ignore = "warn"
#doc_markdown = "warn"

[workspace.lints.rust]
dead_code         = "deny"
non_ascii_idents  = "deny" # Bad for readability and it can also be a security vulnerability

[workspace.dependencies]
filament-hub-campaigns        = { path = "./crates/modules/campaigns" }
filament-hub-config           = { path = "./crates/config" }
filament-hub-indexer-registry = { path = "./crates/modules/indexer-registry" }
filament-hub-rollup           = { path = "./crates/rollup" }
filament-hub-stf              = { path = "./crates/stf" }
filament-prover-risc0         = { path = "./crates/provers/risc0" }

sov-accounts                  = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "5d375bc" }
sov-bank                      = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "5d375bc" }
sov-blob-storage              = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "5d375bc" }
sov-celestia-adapter          = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "5d375bc" }
sov-chain-state               = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "5d375bc" }
sov-cli                       = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "5d375bc" }
sov-db                        = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "5d375bc" }
sov-kernels                   = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "5d375bc" }
sov-ledger-apis               = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "5d375bc" }
sov-mock-da                   = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "5d375bc" }
sov-mock-zkvm                 = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "5d375bc" }
sov-modules-api               = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "5d375bc" }
sov-modules-rollup-blueprint  = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "5d375bc" }
sov-modules-stf-blueprint     = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "5d375bc" }
sov-prover-incentives         = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "5d375bc" }
sov-prover-storage-manager    = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "5d375bc" }
sov-risc0-adapter             = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "5d375bc" }
sov-rollup-interface          = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "5d375bc" }
sov-sequencer                 = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "5d375bc" }
sov-sequencer-registry        = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "5d375bc" }
sov-state                     = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "5d375bc" }
sov-stf-runner                = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "5d375bc" }
sov-test-utils                = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "5d375bc" }
sov-value-setter              = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "5d375bc" }

anyhow              = { version = "1.0.68",   default-features = false }
async-trait         = { version = "0.1.71",   default-features = false }
axum                = { version = "0.7",      default-features = false }
borsh               = { version = "0.10.3",   default-features = false }
clap                = { version = "4.4.10",   default-features = false }
hex                 = { version = "0.4.3",    default-features = false }
jsonrpsee           = { version = "0.20.1",   default-features = false }
prometheus_exporter = { version = "0.8.5",    default-features = false }
proptest            = { version = "1.3",      default-features = false }
rand                = { version = "0.8",      default-features = false }
reqwest             = { version = "0.12",     default-features = false }
risc0-build         = { version = "0.20",     default-features = false }
schemars            = { version = "0.8.16",   default-features = false }
serde               = { version = "1.0.196",  default-features = false }
serde_bytes         = { version = "0.11",     default-features = false }
serde_json          = { version = "1.0",      default-features = false }
sha2                = { version = "0.10.8",   default-features = false }
tempfile            = { version = "3.8",      default-features = false }
tendermint          = { version = "0.32",     default-features = false }
thiserror           = { version = "1.0.50",   default-features = false }
tokio               = { version = "1.35",     default-features = false }
tracing             = { version = "0.1.40",   default-features = false }
tracing-subscriber  = { version = "0.3.17",   default-features = false }
