[workspace]
resolver  = "2"
members   = [
  "crates/cli",
  "crates/config",
  "crates/modules/core",
  "crates/oracle",
  "crates/provers/risc0",
  "crates/rollup",
  "crates/stf",
]

[workspace.package]
version       = "0.1.0"
authors       = ["Filament Team <core@filament.zone>"]
edition       = "2021"
license       = "MIT or Apache-2.0"
homepage      = "https://filament.zone"
repository    = "https://github.com/filament-zone/incentives"
rust-version  = "1.77"
publish       = false

# In case you need inspiration for new lints to add to the list, this is a good
# reference: <https://github.com/EmbarkStudios/rust-ecosystem/blob/6783ae1573d62f3f5439b8ff9e04bec191ec2eaf/lints.toml>.
[workspace.lints.clippy]
debug_assert_with_mut_call    = "deny"
doc_link_with_quotes          = "deny"
inefficient_to_string         = "deny"
map_flatten                   = "deny"
manual_ok_or                  = "deny"
match_same_arms               = "deny"
semicolon_if_nothing_returned = "deny"
#map_err_ignore = "warn"
#doc_markdown = "warn"

[workspace.lints.rust]
dead_code         = "deny"
non_ascii_idents  = "deny" # Bad for readability and it can also be a security vulnerability

[workspace.dependencies]
filament-hub-config   = { path = "./crates/config" }
filament-hub-core     = { path = "./crates/modules/core" }
filament-hub-rollup   = { path = "./crates/rollup" }
filament-hub-stf      = { path = "./crates/stf" }
filament-prover-risc0 = { path = "./crates/provers/risc0" }

sov-accounts                  = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "f4318b3" }
sov-attester-incentives       = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "f4318b3" }
sov-bank                      = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "f4318b3" }
sov-blob-storage              = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "f4318b3" }
sov-capabilities              = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "f4318b3" }
sov-celestia-adapter          = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "f4318b3" }
sov-chain-state               = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "f4318b3" }
sov-cli                       = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "f4318b3" }
sov-db                        = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "f4318b3" }
sov-ethereum                  = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "f4318b3" }
sov-evm                       = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "f4318b3" }
sov-kernels                   = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "f4318b3" }
sov-ledger-apis               = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "f4318b3" }
sov-ledger-json-client        = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "f4318b3" }
sov-mock-da                   = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "f4318b3" }
sov-mock-zkvm                 = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "f4318b3" }
sov-modules-api               = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "f4318b3" }
sov-modules-macros            = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "f4318b3" }
sov-modules-rollup-blueprint  = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "f4318b3" }
sov-modules-stf-blueprint     = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "f4318b3" }
sov-nft                       = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "f4318b3" }
sov-nonces                    = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "f4318b3" }
sov-prover-incentives         = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "f4318b3" }
sov-risc0-adapter             = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "f4318b3" }
sov-rng-da-service            = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "f4318b3" }
sov-rollup-interface          = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "f4318b3" }
sov-sequencer                 = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "f4318b3" }
sov-sequencer-json-client     = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "f4318b3" }
sov-sequencer-registry        = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "f4318b3" }
sov-sp1-adapter               = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "f4318b3" }
sov-state                     = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "f4318b3" }
sov-stf-runner                = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "f4318b3" }
sov-test-harness              = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "f4318b3" }
sov-test-utils                = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "f4318b3" }
sov-value-setter              = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "f4318b3" }

sov-cycle-utils = { git = "https://github.com/Sovereign-Labs/risc0-cycle-macros.git", rev = "99cfee6d5fdf179062aa983a20f427c59e34cba3" }

anyhow              = { version = "1.0.68",   default-features = false }
assert_matches      = { version = "1.5",      default-features = false }
async-trait         = { version = "0.1.81",   default-features = false }
axum                = { version = "0.7",      default-features = false }
backon              = { version = "0.4.4",    default-features = false }
bincode             = { version = "1.3.3",    default-features = false }
borsh               = { version = "1",        default-features = false }
clap                = { version = "4.5.16",   default-features = false }
ethereum-types      = { version = "0.14.1",   default-features = false }
futures             = { version = "0.3",      default-features = false }
hex                 = { version = "0.4.3",    default-features = false }
jsonrpsee           = { version = "0.24",     default-features = false }
lazy_static         = { version = "1.5",      default-features = false }
pretty_assertions   = { version = "1.4.0",    default-features = false }
prometheus          = { version = "0.13.4",   default-features = false }
prometheus_exporter = { version = "0.8.5",    default-features = false }
proptest            = { version = "1.5",      default-features = false }
rand                = { version = "0.8",      default-features = false }
reqwest             = { version = "0.12",     default-features = false }
risc0-build         = { version = "1.0.5",    default-features = false }
schemars            = { version = "0.8.21",   default-features = false }
secp256k1           = { version = "0.29.0",   default-features = false }
serde               = { version = "1.0.196",  default-features = false }
serde_bytes         = { version = "0.11",     default-features = false }
serde_json          = { version = "1.0",      default-features = false }
sha2                = { version = "0.10.8",   default-features = false }
tempfile            = { version = "3.8",      default-features = false }
tendermint          = { version = "0.32",     default-features = false }
thiserror           = { version = "1.0.50",   default-features = false }
tokio               = { version = "1.35",     default-features = false }
tracing             = { version = "0.1.40",   default-features = false }
tracing-subscriber  = { version = "0.3.17",   default-features = false }

ethers-core = { version = "=2.0.14", default-features = false }
ethers-contract = { version = "=2.0.14", default-features = false }
ethers-providers = { version = "=2.0.14", default-features = false }
ethers-signers = { version = "=2.0.14", default-features = false }
ethers-middleware = { version = "=2.0.14", default-features = false }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "ea25df7ed3b02c951c1d6ed49cee1ba40728f3f9", default-features = false }
reth-rpc-types = { git = "https://github.com/paradigmxyz/reth", rev = "ea25df7ed3b02c951c1d6ed49cee1ba40728f3f9", default-features = false }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", rev = "ea25df7ed3b02c951c1d6ed49cee1ba40728f3f9", default-features = false }
revm = { version = "12.1.0", features = ["serde"], default-features = false }
revm-inspectors = { version = "0.5", default-features = false }
