[workspace]
resolver  = "2"
members   = [
  "crates/cli",
  "crates/config",
  "crates/eth",
  "crates/modules/core",
  "crates/provers/risc0",
  "crates/rollup",
  "crates/stf",
  "crates/wasm"
]

[workspace.package]
version       = "0.1.0"
authors       = ["Filament Team <core@filament.zone>"]
edition       = "2021"
license       = "MIT or Apache-2.0"
homepage      = "https://filament.zone"
repository    = "https://github.com/filament-zone/filament"
rust-version  = "1.77"
publish       = false

# In case you need inspiration for new lints to add to the list, this is a good
# reference: <https://github.com/EmbarkStudios/rust-ecosystem/blob/6783ae1573d62f3f5439b8ff9e04bec191ec2eaf/lints.toml>.
[workspace.lints.clippy]
debug_assert_with_mut_call    = "deny"
doc_link_with_quotes          = "deny"
inefficient_to_string         = "deny"
map_flatten                   = "deny"
manual_ok_or                  = "deny"
match_same_arms               = "deny"
semicolon_if_nothing_returned = "deny"
#map_err_ignore = "warn"
#doc_markdown = "warn"

[workspace.lints.rust]
dead_code         = "deny"
non_ascii_idents  = "deny" # Bad for readability and it can also be a security vulnerability

[workspace.dependencies]
filament-hub-config   = { path = "./crates/config" }
filament-hub-core     = { path = "./crates/modules/core" }
filament-hub-eth      = { path = "./crates/eth" }
filament-hub-rollup   = { path = "./crates/rollup", default-features = false }
filament-hub-stf      = { path = "./crates/stf" }
filament-prover-risc0 = { path = "./crates/provers/risc0" }

sov-accounts                  = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "7e77f59" }
sov-attester-incentives       = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "7e77f59" }
sov-bank                      = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "7e77f59" }
sov-capabilities              = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "7e77f59" }
sov-celestia-adapter          = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "7e77f59" }
sov-cli                       = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "7e77f59" }
sov-db                        = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "7e77f59" }
sov-kernels                   = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "7e77f59" }
sov-ledger-apis               = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "7e77f59" }
sov-mock-da                   = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "7e77f59" }
sov-mock-zkvm                 = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "7e77f59" }
sov-modules-api               = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "7e77f59" }
sov-modules-rollup-blueprint  = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "7e77f59" }
sov-modules-stf-blueprint     = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "7e77f59" }
sov-nonces                    = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "7e77f59" }
sov-prover-incentives         = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "7e77f59" }
sov-risc0-adapter             = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "7e77f59" }
sov-rollup-interface          = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "7e77f59" }
sov-sequencer                 = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "7e77f59" }
sov-sequencer-registry        = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "7e77f59" }
sov-state                     = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "7e77f59" }
sov-stf-runner                = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "7e77f59" }
sov-test-utils                = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "7e77f59" }

anyhow                    = { version = "1.0.89",   default-features = false }
async-trait               = { version = "0.1.81",   default-features = false }
axum                      = { version = "0.7",      default-features = false }
backon                    = { version = "0.4.4",    default-features = false }
bech32                    = { version = "0.11",     default-features = false }
bip32                     = { version = "0.5",      default-features = false }
bip39                     = { version = "2.1",      default-features = false }
borsh                     = { version = "1",        default-features = false }
bytes                     = { version = "1",        default-features = false }
clap                      = { version = "4.5.16",   default-features = false }
console_error_panic_hook  = { version = "0.1.7",    default-features = false }
futures                   = { version = "0.3",      default-features = false }
hex                       = { version = "0.4",      default-features = false }
jsonrpsee                 = { version = "0.24",     default-features = false }
k256                      = { version = "0.13",     default-features = false }
lazy_static               = { version = "1.5",      default-features = false }
pretty_assertions         = { version = "1.4.0",    default-features = false }
prometheus_exporter       = { version = "0.8.5",    default-features = false }
rand                      = { version = "0.8.5",    default-features = false }
risc0-build               = { version = "1.0.5",    default-features = false }
schemars                  = { version = "0.8.21",   default-features = false }
serde                     = { version = "1.0.196",  default-features = false }
serde_bytes               = { version = "0.11",     default-features = false }
serde_json                = { version = "1.0",      default-features = false }
sha2                      = { version = "0.10.8",   default-features = false }
sha3                      = { version = "0.10.8",   default-features = false }
tempfile                  = { version = "3.8",      default-features = false }
tendermint                = { version = "0.32",     default-features = false }
tokio                     = { version = "1.35",     default-features = false }
tracing                   = { version = "0.1.40",   default-features = false }
tracing-appender          = { version = "0.2",      default-features = false }
tracing-panic             = { version = "0.1.2",    default-features = false }
tracing-subscriber        = { version = "0.3.17",   default-features = false }
wasm-bindgen              = { version = "0.2.84",   default-features = false }
wasm-bindgen-test         = { version = "0.3.34",   default-features = false }
tower-http                = { version = "0.6.1",    default-features = false }


[patch."ssh://git@github.com/Sovereign-Labs/sov-wallet-format.git"]
sov-wallet-format               = { git = "ssh://git@github.com/filament-zone/sov-wallet-format.git", rev = "44e23f9" }
sov-wallet-format-macro-helpers = { git = "ssh://git@github.com/filament-zone/sov-wallet-format.git", rev = "44e23f9" }

[profile.release.package.filament-hub-wasm]
opt-level = "s"
