[package]
name                  = "pulzaar-app"
version               = "0.1.0"
authors.workspace       = true
edition.workspace       = true
repository.workspace    = true
homepage.workspace      = true
license.workspace       = true
rust-version.workspace  = true
publish.workspace       = true

[dependencies]
pulzaar-chain     = { path = "../chain" }
pulzaar-encoding  = { path = "../encoding" }

async-trait       = { workspace = true }
eyre              = { workspace = true }
penumbra-storage  = { workspace = true }
tendermint        = { workspace = true }
tracing           = { workspace = true }
