[package]
name                  = "pulzaar-app"
version               = "0.1.0"
authors.workspace       = true
edition.workspace       = true
repository.workspace    = true
homepage.workspace      = true
license.workspace       = true
rust-version.workspace  = true
publish.workspace       = true

[dependencies]
pulzaar-chain     = { path = "../chain" }
pulzaar-crypto    = { path = "../crypto" }
pulzaar-encoding  = { path = "../encoding" }

async-trait       = { workspace = true }
eyre              = { workspace = true }
hex               = { workspace = true, features = [ "alloc" ] }
penumbra-storage  = { workspace = true }
serde             = { workspace = true }
sha2              = { workspace = true }
tendermint        = { workspace = true }
tracing           = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
rand              = { workspace = true, features = [ "std_rng" ] }
tempfile          = { workspace = true }
tokio             = { workspace = true, features = [ "macros" ] }
