[package]
name                  = "filament-app"
version               = "0.1.0"
authors.workspace       = true
edition.workspace       = true
repository.workspace    = true
homepage.workspace      = true
license.workspace       = true
rust-version.workspace  = true
publish.workspace       = true

[dependencies]
filament-chain     = { path = "../chain" }
filament-crypto    = { path = "../crypto" }
filament-encoding  = { path = "../encoding" }

async-trait       = { workspace = true }
cnidarium         = { workspace = true }
eyre              = { workspace = true }
hex               = { workspace = true, features = [ "alloc" ] }
num-traits        = { workspace = true }
serde             = { workspace = true }
sha2              = { workspace = true }
tendermint        = { workspace = true }
thiserror         = { workspace = true }
tracing           = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true, features = [ "alloc" ] }
rand              = { workspace = true, features = [ "std_rng" ] }
tempfile          = { workspace = true }
tokio             = { workspace = true, features = [ "macros" ] }
