[package]
name                    = "pulzaar-chain"
version                 = "0.1.0"
authors.workspace       = true
edition.workspace       = true
repository.workspace    = true
homepage.workspace      = true
license.workspace       = true
rust-version.workspace  = true
publish.workspace       = true

[dependencies]
pulzaar-crypto    = { path = "../crypto" }
pulzaar-encoding  = { path = "../encoding" }

eyre              = { workspace = true }
serde             = { workspace = true, features = [ "derive" ] }
