[package]
name                    = "filament-chain"
version                 = "0.1.0"
authors.workspace       = true
edition.workspace       = true
repository.workspace    = true
homepage.workspace      = true
license.workspace       = true
rust-version.workspace  = true
publish.workspace       = true

[dependencies]
filament-crypto    = { path = "../crypto" }
filament-encoding  = { path = "../encoding" }

eyre              = { workspace = true, features = [ "auto-install" ] }
num-traits        = { workspace = true }
once_cell         = { workspace = true }
serde             = { workspace = true, features = [ "derive" ] }
sha2              = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true, features = [ "alloc" ] }
rand              = { workspace = true, features = [ "std_rng" ] }
