[package]
name                    = "pulzaar-crypto"
version                 = "0.1.0"
authors.workspace       = true
edition.workspace       = true
repository.workspace    = true
homepage.workspace      = true
license.workspace       = true
rust-version.workspace  = true
publish.workspace       = true

[dependencies]
ed25519-consensus = { workspace = true, features = [ "serde", "std" ] }
eyre              = { workspace = true }
serde             = { workspace = true, features = [ "derive" ] }
sha2              = { workspace = true }
