[package]
name                    = "filament-encoding"
version                 = "0.1.0"
authors.workspace       = true
edition.workspace       = true
repository.workspace    = true
homepage.workspace      = true
license.workspace       = true
rust-version.workspace  = true
publish.workspace       = true

[dependencies]
bcs               = { workspace = true }
bech32            = { workspace = true, features = [ "std" ]}
cnidarium         = { workspace = true }
eyre              = { workspace = true, features = [ "auto-install" ] }
futures           = { workspace = true }
serde             = { workspace = true }
thiserror         = { workspace = true }


[dev-dependencies]
pretty_assertions = { workspace = true, features = [ "alloc" ] }
rand              = { workspace = true, features = [ "std_rng" ] }
tempfile          = { workspace = true }
tokio             = { workspace = true, features = [ "macros", "rt", "rt-multi-thread" ] }
