[package]
name                  = "flt"
version               = "0.1.0"
publish               = true
authors.workspace     = true
edition.workspace     = true
homepage.workspace    = true
repository.workspace  = true

[[bin]]
name = "flt"
path = "src/main.rs"

[dependencies]
filament-app       = { path = "../app" }
filament-chain     = { path = "../chain" }
filament-config    = { path = "../config" }
filament-crypto    = { path = "../crypto" }
filament-encoding  = { path = "../encoding" }
filament-node      = { path = "../node" }

dialoguer         = { workspace = true }
directories       = { workspace = true }
eyre              = { workspace = true, features = [ "auto-install" ] }
lexopt            = { workspace = true }
rand              = { workspace = true, features = [ "std_rng" ] }
serde             = { workspace = true, features = [ "derive" ] }
tendermint        = { workspace = true }
tendermint-rpc    = { workspace = true, features = [ "http-client" ] }
thiserror         = { workspace = true }
tokio             = { workspace = true, features = [ "rt-multi-thread" ] }

[dev-dependencies]
pretty_assertions = { workspace = true }
radicle-cli-test  = { workspace = true }
tempfile          = { workspace = true }
