[workspace]
resolver  = "2"
members   = [
  "crates/core",
  "crates/modules/fila-outposts",
  "crates/rollup",
  "crates/stf",
]

[workspace.package]
version       = "0.1.0"
authors       = ["Filament Team <core@filament.zone>"]
edition       = "2021"
license       = "MIT or Apache-2.0"
homepage      = "https://filament.zone"
repository    = "https://github.com/filament-zone/incentives"
rust-version  = "1.73"
publish       = false

[workspace.dependencies]
hub-core        = { path = "./crates/core" }
hub-stf         = { path = "./crates/stf" }

fila-outposts   = { path = "./crates/modules/fila-outposts" }

sov-accounts                    = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "13e4077c329ff14954b32e3180d43a6d86fa3172" }
sov-bank                        = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "13e4077c329ff14954b32e3180d43a6d86fa3172" }
sov-sequencer-registry          = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "13e4077c329ff14954b32e3180d43a6d86fa3172" }

sov-celestia-adapter            = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "13e4077c329ff14954b32e3180d43a6d86fa3172" }
sov-db                          = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "13e4077c329ff14954b32e3180d43a6d86fa3172" }
sov-first-read-last-write-cache = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "13e4077c329ff14954b32e3180d43a6d86fa3172" }
sov-ledger-rpc                  = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "13e4077c329ff14954b32e3180d43a6d86fa3172" }
sov-mock-da                     = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "13e4077c329ff14954b32e3180d43a6d86fa3172" }
sov-modules-api                 = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "13e4077c329ff14954b32e3180d43a6d86fa3172" }
sov-modules-core                = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "13e4077c329ff14954b32e3180d43a6d86fa3172" }
sov-modules-rollup-blueprint    = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "13e4077c329ff14954b32e3180d43a6d86fa3172" }
sov-modules-stf-blueprint       = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "13e4077c329ff14954b32e3180d43a6d86fa3172" }
sov-prover-storage-manager      = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "13e4077c329ff14954b32e3180d43a6d86fa3172" }
sov-risc0-adapter               = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "13e4077c329ff14954b32e3180d43a6d86fa3172" }
sov-rollup-interface            = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "13e4077c329ff14954b32e3180d43a6d86fa3172" }
sov-state                       = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "13e4077c329ff14954b32e3180d43a6d86fa3172" }
sov-stf-runner                  = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "13e4077c329ff14954b32e3180d43a6d86fa3172" }
sov-sequencer                   = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "13e4077c329ff14954b32e3180d43a6d86fa3172" }

anyhow              = { version = "1.0",  default-features = false }
borsh               = { version = "0.10", default-features = false }
clap                = { version = "4.4",  default-features = false }
async-trait         = { version = "0.1",  default-features = false }
jsonrpsee           = { version = "0.20", default-features = false }
risc0-build         = { version = "0.19", default-features = false }
serde               = { version = "1.0",  default-features = false }
serde_json          = { version = "1.0",  default-features = false }
sha2                = { version = "0.10", default-features = false }
schemars            = { version = "0.8",  default-features = false }
tempfile            = { version = "3.5",  default-features = false }
tokio               = { version = "1.0",  default-features = false }
tracing             = { version = "0.1",  default-features = false }
tracing-subscriber  = { version = "0.3",  default-features = false }


[patch.crates-io]
# To apply the v0.19 build script downlaod issue hotfix.
risc0-circuit-recursion = { git = "https://github.com/neysofu/risc0-hotfixes", rev = "v0.19.2-hotfix" }
risc0-zkvm              = { git = "https://github.com/neysofu/risc0-hotfixes", rev = "v0.19.2-hotfix" }
risc0-zkvm-platform     = { git = "https://github.com/neysofu/risc0-hotfixes", rev = "v0.19.2-hotfix" }
risc0-circuit-rv32im    = { git = "https://github.com/neysofu/risc0-hotfixes", rev = "v0.19.2-hotfix" }
