[workspace]
resolver  = "2"
members   = [
  "crates/modules/fila-outposts",
  "crates/rollup",
  "crates/stf",
]

[workspace.package]
version       = "0.1.0"
authors       = ["Filament Team <core@filament.zone>"]
edition       = "2021"
license       = "MIT or Apache-2.0"
homepage      = "https://filament.zone"
repository    = "https://github.com/filament-zone/incentives"
rust-version  = "1.73"
publish       = false

[workspace.dependencies]
fila-outposts   = { path = "./crates/modules/fila-outposts" }

sov-accounts                    = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "c5ef0fe" }
sov-bank                        = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "c5ef0fe" }
sov-sequencer-registry          = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "c5ef0fe" }

sov-celestia-adapter            = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "c5ef0fe" }
sov-db                          = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "c5ef0fe" }
sov-first-read-last-write-cache = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "c5ef0fe" }
sov-ledger-rpc                  = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "c5ef0fe" }
sov-mock-da                     = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "c5ef0fe" }
sov-modules-api                 = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "c5ef0fe" }
sov-modules-rollup-blueprint    = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "c5ef0fe" }
sov-modules-stf-blueprint       = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "c5ef0fe" }
sov-prover-storage-manager      = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "c5ef0fe" }
sov-risc0-adapter               = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "c5ef0fe" }
sov-rollup-interface            = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "c5ef0fe" }
sov-state                       = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "c5ef0fe" }
sov-stf-runner                  = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "c5ef0fe" }
sov-sequencer                   = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "c5ef0fe" }

risc0-build             = { version = "0.20", default-features = false }
risc0-circuit-rv32im    = { version = "0.20", default-features = false }
risc0-circuit-recursion = { version = "0.20", default-features = false }
risc0-zkvm              = { version = "0.20", default-features = false }
risc0-zkvm-platform     = { version = "0.20", default-features = false }

anyhow              = { version = "1.0",  default-features = false }
async-trait         = { version = "0.1",  default-features = false }
borsh               = { version = "0.10", default-features = false }
clap                = { version = "4.4",  default-features = false }
hex                 = { version = "0.4",  default-features = false }
jsonrpsee           = { version = "0.20", default-features = false }
serde               = { version = "1.0",  default-features = false }
serde_json          = { version = "1.0",  default-features = false }
schemars            = { version = "0.8",  default-features = false }
tempfile            = { version = "3.5",  default-features = false }
tokio               = { version = "1.0",  default-features = false }
tracing             = { version = "0.1",  default-features = false }
tracing-subscriber  = { version = "0.3",  default-features = false }


[patch.crates-io]
# To apply the v0.19 build script downlaod issue hotfix.
# risc0-circuit-recursion = { git = "https://github.com/neysofu/risc0-hotfixes", rev = "v0.19.2-hotfix" }
# risc0-zkvm              = { git = "https://github.com/neysofu/risc0-hotfixes", rev = "v0.19.2-hotfix" }
# risc0-zkvm-platform     = { git = "https://github.com/neysofu/risc0-hotfixes", rev = "v0.19.2-hotfix" }
# risc0-circuit-rv32im    = { git = "https://github.com/neysofu/risc0-hotfixes", rev = "v0.19.2-hotfix" }
